Fix CommandSender